[package]
name = "blockchain-demo"
version = "0.1.0"
authors = ["wangliqiu <wangliqiu2021@163.com>"]
edition = "2018"


[dependencies]
bincode = "1.3.1"       # encoder / decoder
serde = { version = "1.0", features = ["derive"] }
rust-crypto = "^0.2"
chrono = { version = "0.4", features = ["unstable-locales"] }
# snappy and leveldb need to be installed
# sudo apt-get install libleveldb-dev libsnappy-dev
leveldb = "0.8"
cmake = "0.1"
uint = { version = "0.8", features = ["quickcheck"] }
rustyline = "7.0"

db-key = "0.0.5"